app/assets/stylesheets/landing.scss
/* ... */
#footer-2 {
  margin: 0;
  padding: 68px 0 10px 0;
  background-color: #00110E;
  text-align: start;
  font-family: 'Work Sans', sans-serif;
  .extra-padding {
    padding-left: 60px;
  }
  .footer-menu-header {
    text-align: start;
    color: #00A589;
    font-weight: 600;
    font-size: 18px;
  }

  .link-list {
    padding-left: 0;
    list-style: none;

    .link-item {
      text-align: start;

      .link {
        line-height: 20px;
        font-weight: 400;
        font-size: 16px;
        color: #FCFCFC;
      }
    }
  }

  .sologan {
    text-align: start;
    margin-top: 20px;
    color: #FCFCFC;
    font-weight: 400;
    font-size: 17px;
    line-height: 25.5px;
  }

  .social-links {
    margin-top: 30px;

    .connect-text {
      font-weight: 600;
      font-size: 17px;
      color: #ABB2B1;
      line-height: 25.5px;
    }

    .social-link {
      a {
        i {
          width: 26px;
          height: 26px;
          background-color: #F3F8FC;
          border-radius: 50px;
          font-size: 16px;
          color: #00725F;
          padding: 5px;
        }
      }
    }
  }

  .copy-right {
    text-align: center;
    font-weight: 400;
    font-size: 16px;
    color: #F2F5F4;
    line-height: 26px;
  }
}

#back-to-top-button {
  display: inline-block;
  background-color: rgba(0, 114, 95, 0.7);
  width: 40px;
  height: 40px;
  text-align: center;
  border-radius: 100px;
  position: fixed;
  bottom: 30px;
  right: 30px;
  transition: background-color .3s,
  opacity .5s, visibility .5s;
  opacity: 0;
  visibility: hidden;
  z-index: 1000;

  &:after {
    content: "\f077";
    font-family: FontAwesome;
    font-weight: normal;
    font-style: normal;
    font-size: 1.4em;
    line-height: 40px;
    color: #fff;
  }

  &:hover {
    cursor: pointer;
    text-decoration: none;
  }
}

#back-to-top-button.show {
  opacity: 0.7;
  visibility: visible;
}

.content {
  width: 77%;
  margin: 50px auto;
  font-family: 'Merriweather', serif;
  font-size: 17px;
  color: #6c767a;
  line-height: 1.9;
}

@media (min-width: 500px) {
  .content {
    width: 43%;
  }
  #back-to-top-button {
    margin: 30px;
    right: 10px !important;
  }
}

.content h1 {
  margin-bottom: -10px;
  color: #03a9f4;
  line-height: 1.5;
}

.content h3 {
  font-style: italic;
  color: #96a2a7;
}

@media screen and (max-width: 1300px) {
  #header, #landing-header {
    .hero-container {
      padding: 0;
      position: relative;
      top: 50%;
      transform: translateY(-50%);
    }
  }
}

@media screen and (max-width: 1024px) {
  #header, #landing-header {
    height: auto;

    .hero-container {
      max-width: 635px;
      padding: 60px 0;
      position: relative;
      top: 0;
      transform: translateY(0);

      .hero-text {
        font-size: 32px;
      }
    }
  }
}

@media screen and (max-width: 991px) {
  #feature-list {
    .feature-item {
      padding-top: 35px;
      padding-bottom: 35px;
    }
  }
  #recycle-process {
    padding-top: 70px;
  }
  .section {
    margin-top: 80px !important;

    .section-header {
      font-size: 24px;
      line-height: 32px;
    }
  }
  #how-boxgiver-works {
    .section-header {
      margin-bottom: 15px;
    }

    .work-item {
      .icon {
        padding: 0px 10px;

        svg {
          width: 30px;
        }
      }

      .body {
        .title {
          font-size: 22px;
          line-height: 30px;
          margin-bottom: 5px;
        }
      }
    }
  }
  #subscribe {
    background-image: linear-gradient(#00A589, #00725F);
    padding: 0 15px;

    .subscribe-content {
      padding: 70px 0;
    }
  }
}

@media screen and (max-width: 768px) {
  .grid-container {
    grid-template-columns: repeat(2, 1fr);
  }

  #header {
    .hero-container {
      max-width: 500px;
      padding: 60px 0 70px 0;

      .hero-text {
        font-size: 28px;
      }
    }

    .search-section {
      margin-top: 35px;
      //width: calc(100% - 30px) !important;
    }
  }
  #subscribe {
    .subscribe-content {
      .subscribe-text {
        font-size: 16px;
      }
    }
  }
}

@media screen and (max-width: 767px) {
  #landing-header {
    background-image: url('mobile_bg.png');
    background-size: cover;
    background-repeat: no-repeat;
    padding-bottom: 405px;
    z-index: -1;

    .hero-container {
      max-width: 500px;
      padding: 15px 15px 0 15px;

      .hero-text {
        font-size: 28px;
        line-height: 35px;
        margin-bottom: 15px;
      }

      .hero-description {
        font-size: 16px;
      }
    }
  }
  .landing-body {
    margin-top: -280px;
  }
}

@media screen and (max-width: 1200px) {
  .grid-container {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media screen and (max-width: 992px) {
  .grid-container {
    grid-template-columns: repeat(3, 1fr);
  }
}
/* ... */

